--- a/style.css
+++ b/style.css
@@ -27,13 +27,19 @@ body{
 }
 
 .button-primary{
-    background-color: rgb(177, 43, 65);
+    background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+      );
     padding: 10px;
     border: none;
     border-radius: 5px;
     color: #fff;
     font-weight: bold;
-    margin-right: 10px;
+    margin-right: 15px;
+    cursor: pointer;
 }
 
 .container{
@@ -54,6 +60,43 @@ body{
     width: 100%;
 }
 
+.hero-discription h1{
+    font-size: 33px;
+    color: #1d3557;
+    margin: 20px 0;
+}
+
+.explore-menu-container{
+    margin-top: 30px;
+}
+
+.explore-menu-card{
+    width: 100%;
+    background-color: #fff;
+    margin-bottom: 15px;
+}
+
+.food-img{
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.food-menu-card-discription {
+    padding: 40px;
+}
+
+.explore-menu-text{
+    font-size: 33px;
+    color: #1d3557;
+    margin: 20px 0;
+    text-align: center;
+
+}
+
+.explore-menu-viwe-more{
+    display: flex;
+    justify-content: center;
+}
 
 /* for tablate */
 @media (min-width: 768px){
@@ -69,7 +112,7 @@ body{
         width: 150px;
     }
     .button-primary{
-        padding: 15px;
+        padding: 12px;
         margin-right: 20px;
         font-size: 20px;
     }
@@ -86,11 +129,23 @@ body{
 /* for laptop */
 @media (min-width: 1020px){
     .container{
-        max-width: 1010px;
+       width: 85%;
     }
-    .hero-img-container{
-        width: 550px;
-        height: 550px;
+
+    .hero-discription h1{
+        font-size: 58px;
+    }
+
+    .explore-menu-lists{
+        display: flex;
+        
+    }
+    .explore-menu-card{
+        margin-right: 10px
+    }
+
+    .explore-menu-text{
+        font-size: 58px;
     }
 }
 
