--- a/style.css
+++ b/style.css
@@ -98,6 +98,44 @@ body{
     justify-content: center;
 }
 
+.restaurants-discription{
+    font-size: 33px;
+    color: #1d3557;
+    margin: 20px 0;
+    text-align: center;
+}
+
+.restaurants-grid-row-one, 
+.restaurants-grid-row-two{
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    margin-bottom:5px ;
+}
+
+.restaurants-grid-row-one{
+    align-items: baseline;
+}
+
+.restaurant-1-img,
+.restaurant-2-img,
+.restaurant-3-img,
+.restaurant-4-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.restaurant-1,.restaurant-4{
+    width: 100%;
+    height: 150px;
+}
+
+.restaurant-2,.restaurant-3{
+    width: 120%;
+    height: 200px;
+}
+
 /* for tablate */
 @media (min-width: 768px){
     .navbar{
@@ -158,6 +196,20 @@ body{
       z-index: -5;
       transform: skewY(-5deg);
     }
+
+    .restaurants-discription{
+        font-size: 33px;
+        width: 100;
+    }
+
+    .restaurants-container{
+        display: flex;
+        align-items: center;
+    }
+
+    .restaurants-grid{
+        width: 100%;
+    }
 }
 
 /* for laptop */
@@ -181,6 +233,18 @@ body{
 
     .explore-menu-text{
         font-size: 58px;
+    }
+
+    .restaurants-discription{
+        font-size: 58px;
+        
+    }
+    .restaurants-container{
+        margin-top: 30px;
+    }
+
+    .restaurants-discription{
+        margin-right: 50px;
     }
 }
 
